footer and navbar 95% done

--- a/ptt-app/src/components/layout/Navbar.css
+++ b/ptt-app/src/components/layout/Navbar.css
@@ -1,3 +1,7 @@
+nav {
+    background-color: #333;;
+}
+
 #navbar-logo {
     max-width: 8.5%;
     height: auto;
@@ -15,6 +19,6 @@ ul {
     letter-spacing: 0.1em;
 }
 
-.nav-link:hover {
+ul:hover {
     color:#337ab7;
 }
