--- a/ptt-app/src/components/layout/Footer.css
+++ b/ptt-app/src/components/layout/Footer.css
@@ -4,10 +4,21 @@
     margin-top: 20px;
 }
 
-#footer {
-
-}
-
 #footer-list {
     margin-left: 100px;
+}
+
+#greenLine {
+    height: 4px;
+    background-color: #8bc34a;
+}
+
+#blueLine {
+    height: 4px;
+    background-color: #337ab7;
+}
+
+#goldLine {
+    height: 4px;
+    background-color:#e27429;
 }
