--- a/client/src/components/layout/Navbar.css
+++ b/client/src/components/layout/Navbar.css
@@ -2,18 +2,21 @@ nav {
     background-color: #333;;
 }
 
-#navbar-logo {
+.top_logo {
     max-width: 8.5%;
     height: auto;
+    /* height: 85%; what DC added in */
     position: absolute;
-    margin: 0 10px 0 135px;
+    /* margin: 0 10px 0 135px; */
+    margin: 4px 0 2px 150px; /*DC addition*/
     top: 0px;
 }
 
 ul {
     text-shadow: black;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    margin-left: 252px;
+    /* margin-left: 240px; */
+    margin-left: 320px;  /*DC addition*/
     padding: 3px 4px 3px 4px;
     font-size: 16px;
     letter-spacing: 0.1em;
