--- a/client/src/components/layout/Footer.css
+++ b/client/src/components/layout/Footer.css
@@ -1,7 +1,8 @@
 .footerComponent {
     background-color: #333;
     font-weight: 600;
-    margin-top: 20px;
+    position: absolute;
+    width: 100%;
 }
 
 #footer-list {
