--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -22,3 +22,21 @@
     font-weight: 500;
 }
 
+.card{
+    width: 60%;
+}
+
+.grid{
+    display: flex;
+    position: relative;
+    margin-top: 200px;
+    float: left;
+    border: 1px solid red;
+
+}
+
+.column{
+    position: relative;
+    
+}
+
