--- a/client/src/components/pages/recipe-homepage/RecipeHomepage.css
+++ b/client/src/components/pages/recipe-homepage/RecipeHomepage.css
@@ -1,14 +1,15 @@
 .row{
-    display: inline-flex;
-    border: 1px solid blue;
-    width: 90%;
+    display: flexbox;
+    /* border: 1px solid blue; */
+    width: 75%;
     justify-content: center;
+    margin-top: 45px;
 }
 
 .recipe{
     display: inline-flex;
     /* margin-left: 30px;
     margin-top: 50px; */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     justify-content: center;
 }
