--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -6,35 +6,31 @@
     font-weight: 500;
 }
 
-.grid{
-    display: flex;
-    position: relative;
-    margin-top: 200px;
-    float: left;
-    border: 1px solid red;
-
-}
-
 .column{
-    display: flexbox;
-    position: relative;
-    margin-top: 35px;
-    margin-left: 0px;
-    margin-bottom: 75px;
-    /* border: 1px solid yellow; */
+    /* display: inline-block; */
+    /* position: relative; */
+    /* margin-top: 35px;
+    margin-left: 10pxpx;*/
+    margin-bottom: 75px; 
+    border: 1px solid yellow;
     text-align: center;
-    width: 27%;
+    width: 33%;
 }
 
 .text{
     color: #f0af12;
     font-size: 24px;
-    text-align: right;
+    text-align: center;
     margin-right: 20px;
 }
 
 .imgClass{
     border-right: 10px solid #f0af12;
     border-bottom: 10px solid #f0af12;
-    height: 350px;
+    width: 65%;
+}
+
+.size{
+    /* display: inline-block; */
+   width: 95%;
 }
