--- a/client/src/components/layout/Footer.css
+++ b/client/src/components/layout/Footer.css
@@ -11,23 +11,22 @@
 
 .line{
     width: 100%;
+    justify-content: center;
+    /* border: 1px solid red; */
 }
 
 #greenLine {
     height: 4px;
     background-color: #8bc34a;
-    width: 33%;
 }
 
 #blueLine {
     height: 4px;
     background-color: #337ab7;
-    width: 33%;
 }
 
 #goldLine {
     height: 4px;
     background-color:#e27429;
-    width: 33%;
 }
 
