--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -12,26 +12,27 @@
     /* margin-top: 35px;
     margin-left: 10pxpx;*/
     margin-bottom: 60px; 
-    /* border: 1px solid yellow; */
+    border: 1px solid yellow;
     text-align: center;
     width: 33%;
 }
 
 .text{
     color: #f0af12;
-    font-size: 18px;
-    font-family: "BrandonGrotesqueWeb-Light",Helvetica,Arial,sans-serif;
+    font-size: 1.25rem;
+    font-family: Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     text-align: center;
     margin-right: 20px;
-    margin-top: 37px;
+    margin-top: 15px;
     text-align: right;
 }
+
 
 .imgClass{
     border-right: 12px solid #f0af12;
     border-bottom: 12px solid #f0af12;
-    width: 95%;
+    width: 90%;
 }
 
 .size{
