--- a/client/src/components/pages/recipe-homepage/RecipeHomepage.css
+++ b/client/src/components/pages/recipe-homepage/RecipeHomepage.css
@@ -8,7 +8,7 @@
 .recipeHomepage{
     display: flex;
     margin-top: 50px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
     justify-content: center;
 }
