--- a/client/src/components/pages/recipe-result/reciperesults.css
+++ b/client/src/components/pages/recipe-result/reciperesults.css
@@ -1,6 +1,22 @@
 .jumbo {
     width: 100vw;
+}
+
+.imgbanner {
+    margin-bottom: -2em;
+}
+
+.img-repo {
+    display: block;
+    float: right;
+    margin-right: 4em;
+}
+
+.serving-size {
     
+    color: white;
+    background: #F0AF12;
+    padding: 0.5em 0.7em;
 }
 
 .recipe-card {
@@ -10,7 +26,7 @@
 .recipe-img {
     margin-left: 2em;
     margin-bottom: 1em;
-    
+    width: 25rem;
     border-right: 12px solid #F0AF12;
     border-bottom: 12px solid #F0AF12;
 }
@@ -18,16 +34,10 @@
 .recipe-name {
     color:rgb(242, 169, 0);
     font-family: BrandonGrotesqueWeb-Bold, Cambria, Georgia, serif;
+    margin-left: 0.5em;
 }
 
-.serving-size {
-    /* float: left;
-    clear: both; */
-    margin-left: 2em;
-    color: white;
-    background: #F0AF12;
-    padding: 0.5em 0.7em;
-}
+
 
 .instructions {
     margin: 0 0 10px 1em;
