--- a/client/src/components/pages/recipe-result/reciperesults.css
+++ b/client/src/components/pages/recipe-result/reciperesults.css
@@ -13,7 +13,7 @@
 }
 
 .serving-size {
-    
+    margin: 0 0 0 2em;
     color: white;
     background: #F0AF12;
     padding: 0.5em 0.7em;
@@ -35,6 +35,7 @@
     color:rgb(242, 169, 0);
     font-family: BrandonGrotesqueWeb-Bold, Cambria, Georgia, serif;
     margin-left: 0.5em;
+    margin-bottom: 1em;
 }
 
 
