--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -6,12 +6,13 @@
     font-weight: 500;
 }
 
-.column{
+.images{
     /* display: inline-block; */
     /* position: relative; */
     /* margin-top: 35px;
     margin-left: 10pxpx;*/
     margin-bottom: 60px; 
+    margin-left: 2px;
     border: 1px solid yellow;
     text-align: center;
     width: 33%;
