--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 800px){
+    div.images{
+        width: 90%;
+    }
+}
 
 .link{
     text-align: center;
@@ -26,6 +31,7 @@
     margin-right: 20px;
     margin-top: 15px;
     text-align: right;
+    line-height: 1.5;
 }
 
 
