--- a/client/src/components/layout/Footer.css
+++ b/client/src/components/layout/Footer.css
@@ -1,7 +1,7 @@
 .footerComponent {
     background-color: #333;
     font-weight: 600;
-    position: absolute;
+    position: relative;
     width: 100%;
 }
 
@@ -11,7 +11,7 @@
 
 .line{
     width: 100%;
-    justify-content: center;
+    /* justify-content: center; */
     /* border: 1px solid red; */
 }
 
