--- a/client/src/components/pages/recipe-homepage/RecipeCard.css
+++ b/client/src/components/pages/recipe-homepage/RecipeCard.css
@@ -48,8 +48,12 @@
     width: 90%;
 }
 
+.imgClass:hover {
+    border: solid 0.5px #f0af12;
+}
+
 .size{
     /* display: inline-block; */
    width: 100%;
-   margin-top: 1em;
+   margin-top: 3em;
 }
