--- a/client/src/components/pages/recipe-result/YoutubeVideo.css
+++ b/client/src/components/pages/recipe-result/YoutubeVideo.css
@@ -5,3 +5,11 @@
     margin-top: 10%;
     padding: 1rem 0 2rem 0;
 }
+
+.p-noVideo {
+    margin-top: 40px;
+    padding-bottom: 55px;
+    font-size: 40px;
+    color: #72635D;
+    text-align: center;
+}
